# vscode_cmake_demo

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
src/: Test.cpp  Test.h  add.cpp  add.h  main.cpp
